Altered npm test command to use nyc with the mocha reporter for code  coverage.
 Expanded Tests on the Borehole resource to cover more error cases.

 Added validation exception handler for the saveNew Borehole function

 Changes to be committed:
	modified:   Models/boreholeModel.js
	modified:   package.json
	modified:   test/boreholesUnitTest.js

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "nyc": "^13.1.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "nyc --reporter=text mocha"
   },
   "author": "",
   "license": "ISC"
