Created single config file that provides the config values for the  application based on the current envirnment NODE_ENV state.
 Removed old implementation with config npm package and associated
 files

 Removed npm config package from package

 On branch configurationTest
 Changes to be committed:
	modified:   Models/boreholeModel.js
	new file:   config.js
	deleted:    config/dev.json
	deleted:    config/prod.json
	deleted:    config/test.json
	modified:   package-lock.json
	modified:   package.json
	modified:   template.yml

--- a/template.yml
+++ b/template.yml
@@ -28,8 +28,8 @@ Resources:
       Timeout: 3
       Environment:
         Variables:
-          TABLE_NAME: boreholesTable #!Ref MyTable
-          NODE_ENV: dev
+          BOREHOLE_TABLE_NAME: !Ref MyTable
+          NODE_ENV: prod
 
       Policies:
 
