--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
     - run: npm install
     - run: npm test
 
-    - save_cache:
-        paths:
-        - node_modules
+#    - save_cache:
+#        key: v1-myapp-{{ arch }}-{{ checksum "project.clj" }}
+#        paths:
+#        - node_modules
