Set NODE_ENV environment variable in CircleCI config  Reverted changes to exclude line from boreholeModel.js
 On branch circleCITest

 Changes to be committed:
	modified:   .circleci/config.yml
	modified:   Models/boreholeModel.js

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,11 @@ jobs:
 
     steps:
     - checkout
+
+    # set environment variables
+    command: |
+      echo 'export NODE_ENV="test"' >> $BASH_ENV
+
     - run: docker-compose up -d
     - run: npm install
     - run: npm test
