--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,10 @@ jobs:
     steps:
     - checkout
 
-    # set environment variables
-    command: |
-      echo 'export NODE_ENV="test"' >> $BASH_ENV
+    - run:
+        name: "Setup custom environment variables"
+        command: |
+          echo 'export NODE_ENV="test"' >> $BASH_ENV
 
     - run: docker-compose up -d
     - run: npm install
