--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
         command: |
           echo 'export NODE_ENV="test"' >> $BASH_ENV
 
-    - run: docker-compose up -d
+    - run: docker-compose up
     - run: npm install
     - run: npm test
 
