Updated config.js to use docker service name for DB inside test  environment
 Added test-runner to docker-compose, and added hack to force container
 to stay open.

 Removed CMD from Dockerfile test-runner

 On branch circleCITest

 Changes to be committed:
	modified:   .circleci/config.yml
	modified:   Dockerfile
	modified:   config.js
	modified:   docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,14 +31,9 @@ services:
     depends_on:
       - dynamodb-local
 
-#  test-runner:
-#    image: node:8-slim
-#    user: "node"
-#    working_dir: /home/node/app
-#    environment:
-#     - NODE_ENV=test
-#    volumes:
-#      - ./:/home/node/app
-#    command: "npm install"
-#    depends_on:
-#    - dynamoDB-configurator
+  test-runner:
+    build: .
+    command: tail -F package.json
+    container_name: test_runner
+    depends_on:
+    - dynamoDB-configurator
