--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,7 @@ jobs:
           echo 'export NODE_ENV="test"' >> $BASH_ENV
 
     - run: docker-compose up -d
-    - run: docker build . -t test-image
-    - run: docker run test-image
+    - run: docker exec -it boreholeapi_test-runner_1 npm test
 
 #    - save_cache:
 #        key: v1-myapp-{{ arch }}-{{ checksum "project.clj" }}
