Added mocha-junit-reporter npm package
 Set npm test script to generate a junit XML file in a mounted volume
 accessible to the test runner host

 Added reports directory to .gitignore

 Added check for NODE_ENV to app.js on start up

 On branch circleCITest

 Changes to be committed:
	modified:   .circleci/config.yml
	modified:   .gitignore
	modified:   Dockerfile
	modified:   app.js
	modified:   docker-compose.yaml
	modified:   package-lock.json
	modified:   package.json
	modified:   test/boreholesUnitTest.js

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,10 @@ jobs:
     # access to the required resources
     - run: docker exec -it test_runner npm test
 
+    - store_test_results:
+         path: reports
+
+
 #    - save_cache:
 #        key: v1-myapp-{{ arch }}-{{ checksum "project.clj" }}
 #        paths:
