--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   },
   "devDependencies": {
     "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.18.0",
     "nyc": "^13.1.0"
   },
   "scripts": {
-    "test": "nyc --reporter=text mocha"
+    "test": "nyc ./node_modules/.bin/mocha --recursive --timeout=10000 --exit --reporter mocha-junit-reporter --reporter-options mochaFile=reportsMount/reports/mocha/test-results.xml"
   },
   "author": "",
   "license": "ISC"
