Updated boreholeTests to expect the statusCode to be included in all  returned objects from the API
 Updated responseMiddleware to send statuscode with all responses

 Updated configuration to use named docker network

 Created npm run script commands for starting environment and SAM local

 Added 'strict' declaration to devRunner.js

 On branch bugFixesFromRunningInLocalLambda
 Changes to be committed:
	modified:   Middleware/responseMiddleware.js
	modified:   Models/boreholeModel.js
	modified:   README.md
	modified:   Routers/boreholesRouter.js
	modified:   bin/devRunner.js
	modified:   bin/lambdaRunner.js
	modified:   config.js
	modified:   docker-compose.yaml
	modified:   package.json
	modified:   template.yml
	modified:   test/boreholesUnitTest.js

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,24 +18,33 @@ services:
     restart: always
     ports:
     - "8000:8000"
+    networks:
+    - borehole_local_network
 
   dynamoDB-configurator:
     image: ro5635/awscli
     volumes:
     - ./localDynamoDBConfig.sh:/hostScript/script.sh
     environment:
-      # Set some empty credentials, they need to exist but not validated for local use
-      - AWS_ACCESS_KEY_ID=EXAMPLEID_EXAMPLEID
-      - AWS_SECRET_ACCESS_KEY=EXAMPLEKEY/EXAMPLEKEY/EXAMPLEKEY
-      - AWS_DEFAULT_REGION=local
+    # Set some empty credentials, they need to exist but not validated for local use
+    - AWS_ACCESS_KEY_ID=EXAMPLEID_EXAMPLEID
+    - AWS_SECRET_ACCESS_KEY=EXAMPLEKEY/EXAMPLEKEY/EXAMPLEKEY
+    - AWS_DEFAULT_REGION=local
+    networks:
+    - borehole_local_network
     depends_on:
-      - dynamodb-local
+    - dynamodb-local
 
   test-runner:
     build: .
     command: tail -F package.json
     container_name: test_runner
     volumes:
-      - ./:/home/node/app/reportsMount
+    - ./:/home/node/app/reportsMount
+    networks:
+    - borehole_local_network
     depends_on:
     - dynamoDB-configurator
+
+networks:
+  borehole_local_network:
