--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,8 +12,8 @@ phases:
 
 
     # Upgrade AWS CLI to the latest version
-    - pip install --upgrade pip
-    - pip install --upgrade awscli
+    - pip3 install --upgrade pip
+    - pip3 install --upgrade awscli
   pre_build:
     commands:
     # Discover and run unit tests in the 'tests' directory
