Add cloudformation deploy stack command to build-spec.yaml
 On branch aws-codebuild-codedeploy-cd

 Changes to be committed:
	modified:   buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,6 +28,9 @@ phases:
     commands:
     # Use AWS SAM to package the application using AWS CloudFormation
     - aws cloudformation package --template template.yml --s3-bucket boreholeapi-sam-deployment --output-template template-export.yml
+  deploy:
+    # Call the deployment (From inside CodeBuild...)
+    - aws cloudformation deploy --template-file template-export.yml --stack-name boreholeapistack
 artifacts:
   type: zip
   files:
