Correct typo in CodeBuild  build-spec.yaml
 On branch aws-codebuild-codedeploy-cd

 Changes to be committed:
	modified:   buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,6 +29,7 @@ phases:
     # Use AWS SAM to package the application using AWS CloudFormation
     - aws cloudformation package --template template.yml --s3-bucket boreholeapi-sam-deployment --output-template template-export.yml
   deploy:
+    commands:
     # Call the deployment (From inside CodeBuild...)
     - aws cloudformation deploy --template-file template-export.yml --stack-name boreholeapistack
 artifacts:
