Switched to allowed build statement
 On branch aws-codebuild-codedeploy-cd

 Changes to be committed:
	modified:   buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,7 +28,7 @@ phases:
     commands:
     # Use AWS SAM to package the application using AWS CloudFormation
     - aws cloudformation package --template template.yml --s3-bucket boreholeapi-sam-deployment --output-template template-export.yml
-  deploy:
+  post_build:
     commands:
     # Call the deployment (From inside CodeBuild...)
     - aws cloudformation deploy --template-file template-export.yml --stack-name boreholeapistack
